deploy: 5715c89787ff0e532b0b4718a04210b4d12eb2d1

--- a/src/AdminProfile.html
+++ b/src/AdminProfile.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Profile — ComplaNet</title>
-  <script type="module" crossorigin src="../assets/adminProfile-BI9zW0v4.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/supabaseClient-C2pcRdcq.js">
-  <link rel="modulepreload" crossorigin href="../assets/darkMode-0pfczJwG.js">
-  <link rel="stylesheet" crossorigin href="../assets/supabaseClient-DdYYvB8s.css">
+  <script type="module" crossorigin src="../assets/adminProfile-BK5F5mNi.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/supabaseClient-DBFBYl3d.js">
+  <link rel="modulepreload" crossorigin href="../assets/darkMode-Bo7vC4BU.js">
+  <link rel="stylesheet" crossorigin href="../assets/supabaseClient-a2wLv86l.css">
 </head>
 
 <body
@@ -60,7 +60,9 @@
                 <a href="AdminDashboard.html" class="nav-content">Dashboard</a>
                 <a href="AllComplaints.html" class="nav-content">All Complaints</a>
                 <a href="Analytics.html" class="nav-content">Analytics</a>
-                <a href="AdminProfile.html" class="font-semibold text-eco-dark hover:text-eco-dark">Admin Profile</a>
+                <a href="AdminProfile.html"
+                    class="font-semibold text-eco-dark hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">Admin
+                    Profile</a>
             </nav>
         </div>
         <div class="px-6 py-4 border-t dark:border-gray-700 flex flex-col space-y-2">
@@ -115,7 +117,7 @@
                     <h2 class="text-xl md:text-3xl font-bold text-gray-800 dark:text-white" id="adminName">Loading
                         Name...</h2>
                     <span id="adminRole"
-                        class="inline-block mt-2 px-3 py-1 bg-blue-100 text-blue-700 dark:bg-blue-900 dark:text-blue-300 rounded-full text-sm font-semibold">
+                        class="inline-block mt-2 px-3 py-1 bg-blue-200 text-blue-800 dark:bg-blue-900 dark:text-blue-300 rounded-full text-sm font-semibold">
                         Loading Role...
                     </span>
                 </div>
@@ -197,7 +199,7 @@
             <div>
                 <h2 class="text-xl font-semibold mb-4 
                    text-[var(--color-blue-btn)] 
-                   dark:text-[var(--color-eco)]">
+                   dark:text-blue-400">
                     ComplaNet Admin
                 </h2>
                 <p class="text-sm leading-6">
@@ -210,7 +212,7 @@
             <div>
                 <h2 class="text-xl font-semibold mb-4 
                    text-[var(--color-blue-btn)]
-                   dark:text-[var(--color-eco)]">
+                   dark:text-blue-400">
                     Quick Navigation
                 </h2>
                 <ul class="space-y-2 text-sm">
@@ -230,7 +232,7 @@
             <div>
                 <h2 class="text-xl font-semibold mb-4 
                    text-[var(--color-blue-btn)]
-                   dark:text-[var(--color-eco)]">
+                   dark:text-blue-400">
                     Admin Tools
                 </h2>
                 <ul class="space-y-2 text-sm">
