--- a/src/AdminComplaintDetails.html
+++ b/src/AdminComplaintDetails.html
@@ -7,10 +7,10 @@
     <title>Complaint Details — ComplaNet Admin</title>
     <!-- Font Awesome -->
 
-  <script type="module" crossorigin src="../assets/adminComplaintDetails-Bde9Ftsl.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/supabaseClient-C2pcRdcq.js">
-  <link rel="modulepreload" crossorigin href="../assets/darkMode-0pfczJwG.js">
-  <link rel="stylesheet" crossorigin href="../assets/supabaseClient-DdYYvB8s.css">
+  <script type="module" crossorigin src="../assets/adminComplaintDetails-CMjeQTX2.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/supabaseClient-DBFBYl3d.js">
+  <link rel="modulepreload" crossorigin href="../assets/darkMode-Bo7vC4BU.js">
+  <link rel="stylesheet" crossorigin href="../assets/supabaseClient-a2wLv86l.css">
 </head>
 
 <body
@@ -27,7 +27,8 @@
         <!-- Desktop Navigation -->
         <nav class="hidden md:flex space-x-6 items-center">
             <a href="AdminDashboard.html" class="nav-content hover:text-eco transition">Dashboard</a>
-            <a href="AllComplaints.html" class="font-semibold text-eco-dark hover:text-eco-dark">All
+            <a href="AllComplaints.html"
+                class="font-semibold text-eco-dark hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">All
                 Complaints</a>
             <a href="Analytics.html" class="nav-content hover:text-eco transition">Analytics</a>
 
@@ -61,7 +62,9 @@
             </div>
             <nav class="mt-6 flex flex-col space-y-2 px-6">
                 <a href="AdminDashboard.html" class="nav-content hover:text-eco">Dashboard</a>
-                <a href="AllComplaints.html" class="font-semibold text-eco-dark hover:text-eco-dark">All Complaints</a>
+                <a href="AllComplaints.html"
+                    class="font-semibold text-eco-dark hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">All
+                    Complaints</a>
                 <a href="Analytics.html" class="nav-content hover:text-eco">Analytics</a>
                 <a href="AdminProfile.html" class="nav-content hover:text-eco">Admin Profile</a>
             </nav>
@@ -147,7 +150,7 @@
                     <div class="flex items-center space-x-4 mb-4">
                         <!-- Initials Avatar (Default) -->
                         <div id="avatarInitials"
-                            class="w-12 h-12 rounded-full bg-blue-100 flex items-center justify-center text-blue-600 font-bold text-xl">
+                            class="w-12 h-12 rounded-full bg-blue-200 flex items-center justify-center text-blue-800 font-bold text-xl">
                             U
                         </div>
                         <!-- Image Avatar (Hidden by default) -->
@@ -269,7 +272,7 @@
             <div class="mr-3 text-red-500"><i class="fas fa-file-pdf text-xl"></i></div>
             <div class="flex-1 overflow-hidden">
                 <p
-                    class="attachment-filename text-sm font-medium text-blue-600 dark:text-blue-400 truncate group-hover:underline">
+                    class="attachment-filename text-sm font-medium text-blue-700 dark:text-blue-400 truncate group-hover:underline">
                 </p>
                 <p class="attachment-desc text-xs text-gray-500 dark:text-gray-400"></p>
             </div>
