--- a/src/AdminDashboard.html
+++ b/src/AdminDashboard.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ComplaNet — Admin Dashboard</title>
-  <script type="module" crossorigin src="../assets/adminDashboard-DFSVjKRG.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/supabaseClient-C2pcRdcq.js">
-  <link rel="modulepreload" crossorigin href="../assets/darkMode-0pfczJwG.js">
-  <link rel="stylesheet" crossorigin href="../assets/supabaseClient-DdYYvB8s.css">
+  <script type="module" crossorigin src="../assets/adminDashboard-0e8UJkVB.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/supabaseClient-DBFBYl3d.js">
+  <link rel="modulepreload" crossorigin href="../assets/darkMode-Bo7vC4BU.js">
+  <link rel="stylesheet" crossorigin href="../assets/supabaseClient-a2wLv86l.css">
 </head>
 
 <body
@@ -24,7 +24,8 @@
 
         <!-- Desktop Navigation -->
         <nav class="hidden md:flex space-x-6 items-center">
-            <a href="AdminDashboard.html" class="font-semibold text-eco-dark hover:text-eco-dark">Dashboard</a>
+            <a href="AdminDashboard.html"
+                class="font-semibold text-eco-dark hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">Dashboard</a>
             <a href="AllComplaints.html" class="nav-content">All Complaints</a>
             <a href="Analytics.html" class="nav-content">Analytics</a>
 
@@ -57,7 +58,8 @@
                 <img src="../images/BGlessLogoDark.png" alt="Logo" class="h-10">
             </div>
             <nav class="mt-6 flex flex-col space-y-2 px-6">
-                <a href="AdminDashboard.html" class="font-semibold text-eco-dark hover:text-eco-dark">Dashboard</a>
+                <a href="AdminDashboard.html"
+                    class="font-semibold text-eco-dark hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">Dashboard</a>
                 <a href="AllComplaints.html" class="nav-content">All Complaints</a>
                 <a href="Analytics.html" class="nav-content">Analytics</a>
                 <a href="AdminProfile.html" class="nav-content">Admin Profile</a>
@@ -162,7 +164,9 @@
             <div class="lg:col-span-2 bg-white dark:bg-gray-800 rounded-xl shadow-lg p-6">
                 <div class="flex justify-between items-center mb-6">
                     <h2 class="text-xl font-bold text-gray-800 dark:text-gray-200">Recent Activity</h2>
-                    <a href="AllComplaints.html" class="text-eco hover:text-eco-dark text-sm font-semibold">View All</a>
+                    <a href="AllComplaints.html"
+                        class="text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300 text-sm font-semibold">View
+                        All</a>
                 </div>
                 <div class="overflow-x-auto hidden md:block">
                     <table class="min-w-full bg-white dark:bg-gray-800">
@@ -204,7 +208,7 @@
                         </div>
                         <div class="pt-2 border-t dark:border-gray-700 text-right">
                             <a href="#"
-                                class="card-link text-blue-500 hover:text-blue-600 text-xs font-semibold uppercase tracking-wide">
+                                class="card-link text-blue-700 hover:text-blue-900 dark:text-blue-400 dark:hover:text-blue-300 text-xs font-semibold uppercase tracking-wide">
                                 View Details →
                             </a>
                         </div>
@@ -226,7 +230,7 @@
                         </td>
                         <td class="py-3 px-6 text-center">
                             <a href="#"
-                                class="col-link text-blue-500 hover:text-blue-700 hover:underline text-xs font-medium">View
+                                class="col-link text-blue-700 hover:text-blue-900 dark:text-blue-400 dark:hover:text-blue-300 hover:underline text-xs font-medium">View
                                 Details</a>
                         </td>
                     </tr>
@@ -273,7 +277,7 @@
             <div>
                 <h2 class="text-xl font-semibold mb-4 
                    text-[var(--color-blue-btn)] 
-                   dark:text-[var(--color-eco)]">
+                   dark:text-blue-400">
                     ComplaNet Admin
                 </h2>
                 <p class="text-sm leading-6">
@@ -286,7 +290,7 @@
             <div>
                 <h2 class="text-xl font-semibold mb-4 
                    text-[var(--color-blue-btn)]
-                   dark:text-[var(--color-eco)]">
+                   dark:text-blue-400">
                     Quick Navigation
                 </h2>
                 <ul class="space-y-2 text-sm">
@@ -306,7 +310,7 @@
             <div>
                 <h2 class="text-xl font-semibold mb-4 
                    text-[var(--color-blue-btn)]
-                   dark:text-[var(--color-eco)]">
+                   dark:text-blue-400">
                     Admin Tools
                 </h2>
                 <ul class="space-y-2 text-sm">
