--- a/src/Login.html
+++ b/src/Login.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ComplaNet — Login</title>
-  <script type="module" crossorigin src="../assets/login-CjlYQLt6.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/supabaseClient-C2pcRdcq.js">
-  <link rel="stylesheet" crossorigin href="../assets/supabaseClient-DdYYvB8s.css">
+  <script type="module" crossorigin src="../assets/login-BUVdTIgW.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/supabaseClient-DBFBYl3d.js">
+  <link rel="stylesheet" crossorigin href="../assets/supabaseClient-a2wLv86l.css">
 </head>
 
 <body
