Add UI enhancements: complaint category icons, premium dashboard cards, improved navigation highlighting, and fixed menu toggles across all pages

--- a/src/ChangePassword.html
+++ b/src/ChangePassword.html
@@ -91,7 +91,7 @@
   </footer>
 
   <!-- Scripts -->
-  <script src="./darkMode.js"></script>
+  <script type="module" src="./darkMode.js"></script>
   <script type="module" src="./changePassword.js"></script>
 
 </body>
