--- a/src/Login.html
+++ b/src/Login.html
@@ -78,7 +78,7 @@
     &copy; 2025 ComplaNet — University Complaint Management System
   </footer>
 
-  <script src="./darkMode.js"></script>
+  <script type="module" src="./darkMode.js"></script>
   <script type="module" src="./login.js"></script>
 
 </body>
