--- a/src/ResetPassword.html
+++ b/src/ResetPassword.html
@@ -63,7 +63,7 @@
   </footer>
 
   <!-- Scripts -->
-  <script src="./darkMode.js"></script>
+  <script type="module" src="./darkMode.js"></script>
   <script type="module" src="./resetPassword.js"></script>
 
 </body>
