deploy: 68c4a36cc5cb59ee0bd40a26040afb0c9b110611

--- a/src/AdminComplaintDetails.html
+++ b/src/AdminComplaintDetails.html
@@ -7,9 +7,9 @@
     <title>Complaint Details — ComplaNet Admin</title>
     <!-- Font Awesome -->
 
-  <script type="module" crossorigin src="../assets/adminComplaintDetails-C2VTP6Q0.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/darkMode-BxazBmZi.js">
-  <link rel="stylesheet" crossorigin href="../assets/darkMode-Bi39WSay.css">
+  <script type="module" crossorigin src="../assets/adminComplaintDetails-PrUCZPsX.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/darkMode-U0iCC7-S.js">
+  <link rel="stylesheet" crossorigin href="../assets/darkMode-CDwods8u.css">
 </head>
 
 <body
@@ -209,52 +209,55 @@
 
     <!-- Footer -->
     <footer
-        class="w-full py-10 mt-10 bg-eco-light text-greenvine-dark dark:bg-[#0F1A24] dark:text-gray-300 text-center text-sm shadow-inner transition-colors">
-        <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8 md:gap-10 text-center md:text-left px-6">
+        class="w-full py-10 mt-10 bg-[var(--color-eco-light)] text-[var(--color-text-light)] dark:bg-[#0F1A24] dark:text-gray-200">
 
-            <!-- Column 1 -->
-            <div>
-                <h2 class="text-xl font-heading font-semibold mb-4 text-greenvine dark:text-eco">
+        <div class="max-w-4xl mx-auto px-6">
+
+            <!-- ComplaNet Admin Title -->
+            <div class="text-center mb-8">
+                <h2 class="text-2xl font-heading font-bold mb-3 text-[var(--color-blue-btn)] dark:text-blue-400">
                     ComplaNet Admin
                 </h2>
-                <p class="text-sm leading-6 opacity-80">
-                    Administrative portal for managing university complaints.<br>
-                    Monitor, assign, and resolve complaints efficiently.
+                <p class="text-sm leading-6 opacity-80 max-w-2xl mx-auto">
+                    Administrative portal for managing university complaints. Monitor, assign, and resolve complaints
+                    efficiently.
                 </p>
             </div>
 
-            <!-- Column 2 -->
-            <div>
-                <h2 class="text-xl font-heading font-semibold mb-4 text-greenvine dark:text-eco">
+            <!-- Quick Navigation - Centered -->
+            <div class="text-center mb-8">
+                <h3 class="text-lg font-semibold mb-4 text-[var(--color-blue-btn)] dark:text-blue-400">
                     Quick Navigation
-                </h2>
-                <ul class="space-y-2 text-sm">
-                    <li><a href="./AdminDashboard.html"
-                            class="hover:text-eco-dark dark:hover:text-eco transition">Dashboard</a></li>
-                    <li><a href="AllComplaints.html" class="hover:text-eco-dark dark:hover:text-eco transition">All
-                            Complaints</a></li>
-                    <li><a href="Analytics.html"
-                            class="hover:text-eco-dark dark:hover:text-eco transition">Analytics</a></li>
+                </h3>
+                <ul class="flex flex-wrap justify-center gap-6 text-sm">
+                    <li>
+                        <a href="./AdminDashboard.html"
+                            class="inline-flex items-center gap-2 text-gray-800 hover:text-blue-700 dark:text-gray-300 dark:hover:text-blue-400 transition-all duration-300 hover:-translate-y-1">
+                            <i class="fas fa-tachometer-alt"></i>
+                            <span>Dashboard</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="AllComplaints.html"
+                            class="inline-flex items-center gap-2 text-gray-800 hover:text-blue-700 dark:text-gray-300 dark:hover:text-blue-400 transition-all duration-300 hover:-translate-y-1">
+                            <i class="fas fa-list-alt"></i>
+                            <span>All Complaints</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="Analytics.html"
+                            class="inline-flex items-center gap-2 text-gray-800 hover:text-blue-700 dark:text-gray-300 dark:hover:text-blue-400 transition-all duration-300 hover:-translate-y-1">
+                            <i class="fas fa-chart-line"></i>
+                            <span>Analytics</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
 
-            <!-- Column 3 -->
-            <div>
-                <h2 class="text-xl font-heading font-semibold mb-4 text-greenvine dark:text-eco">
-                    Admin Tools
-                </h2>
-                <ul class="space-y-2 text-sm">
-                    <li><a href="#" class="hover:text-eco-dark dark:hover:text-eco transition">Settings</a></li>
-                    <li><a href="#" class="hover:text-eco-dark dark:hover:text-eco transition">Reports</a></li>
-                    <li><a href="#" class="hover:text-eco-dark dark:hover:text-eco transition">User Management</a></li>
-                </ul>
+            <div class="text-center text-sm mt-10 text-gray-700 dark:text-gray-400">
+                © 2025 ComplaNet. All rights reserved.
             </div>
 
-        </div>
-
-        <div class="mt-10 pt-6 border-t border-gray-200 dark:border-gray-700 opacity-60">
-            © 2025 ComplaNet. All rights reserved.
-        </div>
     </footer>
 
     <!-- TEMPLATES -->
