--- a/src/AllComplaints.html
+++ b/src/AllComplaints.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Complaints — ComplaNet Admin</title>
-  <script type="module" crossorigin src="../assets/allComplaints-jMjXNnAm.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/darkMode-BxazBmZi.js">
-  <link rel="stylesheet" crossorigin href="../assets/darkMode-Bi39WSay.css">
+  <script type="module" crossorigin src="../assets/allComplaints-u2q0uiQX.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/darkMode-U0iCC7-S.js">
+  <link rel="stylesheet" crossorigin href="../assets/darkMode-CDwods8u.css">
 </head>
 
 <body
@@ -287,66 +287,52 @@
            bg-[var(--color-eco-light)] text-[var(--color-text-light)]
            dark:bg-[#0F1A24] dark:text-gray-200">
 
-        <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8 md:gap-10 text-center md:text-left px-6">
+        <div class="max-w-4xl mx-auto px-6">
 
-            <!-- Column 1 -->
-            <div>
-                <h2 class="text-xl font-semibold mb-4 
-                   text-[var(--color-blue-btn)] 
-                   dark:text-blue-400">
+            <!-- ComplaNet Admin Title -->
+            <div class="text-center mb-8">
+                <h2 class="text-2xl font-heading font-bold mb-3 text-[var(--color-blue-btn)] dark:text-blue-400">
                     ComplaNet Admin
                 </h2>
-                <p class="text-sm leading-6">
-                    Administrative portal for managing university complaints.<br>
-                    Monitor, assign, and resolve complaints efficiently.
+                <p class="text-sm leading-6 opacity-80 max-w-2xl mx-auto">
+                    Administrative portal for managing university complaints. Monitor, assign, and resolve complaints
+                    efficiently.
                 </p>
             </div>
 
-            <!-- Column 2 -->
-            <div>
-                <h2 class="text-xl font-semibold mb-4 
-                   text-[var(--color-blue-btn)]
-                   dark:text-blue-400">
+            <!-- Quick Navigation - Centered -->
+            <div class="text-center mb-8">
+                <h3 class="text-lg font-semibold mb-4 text-[var(--color-blue-btn)] dark:text-blue-400">
                     Quick Navigation
-                </h2>
-                <ul class="space-y-2 text-sm">
-                    <li><a href="./AdminDashboard.html"
-                            class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">Dashboard</a>
+                </h3>
+                <ul class="flex flex-wrap justify-center gap-6 text-sm">
+                    <li>
+                        <a href="./AdminDashboard.html"
+                            class="inline-flex items-center gap-2 text-gray-800 hover:text-blue-700 dark:text-gray-300 dark:hover:text-blue-400 transition-all duration-300 hover:-translate-y-1">
+                            <i class="fas fa-tachometer-alt"></i>
+                            <span>Dashboard</span>
+                        </a>
                     </li>
-                    <li><a href="AllComplaints.html"
-                            class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">All
-                            Complaints</a></li>
-                    <li><a href="Analytics.html"
-                            class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">Analytics</a>
+                    <li>
+                        <a href="AllComplaints.html"
+                            class="inline-flex items-center gap-2 text-gray-800 hover:text-blue-700 dark:text-gray-300 dark:hover:text-blue-400 transition-all duration-300 hover:-translate-y-1">
+                            <i class="fas fa-list-alt"></i>
+                            <span>All Complaints</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="Analytics.html"
+                            class="inline-flex items-center gap-2 text-gray-800 hover:text-blue-700 dark:text-gray-300 dark:hover:text-blue-400 transition-all duration-300 hover:-translate-y-1">
+                            <i class="fas fa-chart-line"></i>
+                            <span>Analytics</span>
+                        </a>
                     </li>
                 </ul>
             </div>
 
-            <!-- Column 3 -->
-            <div>
-                <h2 class="text-xl font-semibold mb-4 
-                   text-[var(--color-blue-btn)]
-                   dark:text-blue-400">
-                    Admin Tools
-                </h2>
-                <ul class="space-y-2 text-sm">
-                    <li><a href="#settings"
-                            class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">Settings</a>
-                    </li>
-                    <li><a href="#reports"
-                            class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">Reports</a>
-                    </li>
-                    <li><a href="#user-management"
-                            class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">User
-                            Management</a></li>
-                </ul>
+            <div class="text-center text-sm mt-10 text-gray-700 dark:text-gray-400">
+                © 2025 ComplaNet. All rights reserved.
             </div>
-
-        </div>
-
-        <div class="text-center text-sm mt-10 text-gray-700 dark:text-gray-400">
-            © 2025 ComplaNet. All rights reserved.
-        </div>
 
     </footer>
 
