deploy: 3cad8676148fcaf3736394197e3d013674eb45de

--- a/src/AdminDashboard.html
+++ b/src/AdminDashboard.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ComplaNet — Admin Dashboard</title>
-  <script type="module" crossorigin src="../assets/adminDashboard-BDZdWv7y.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/darkMode-U0iCC7-S.js">
-  <link rel="stylesheet" crossorigin href="../assets/darkMode-CDwods8u.css">
+  <script type="module" crossorigin src="../assets/adminDashboard-B_xCTY_c.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/darkMode-BCgXZOzb.js">
+  <link rel="stylesheet" crossorigin href="../assets/darkMode-DXUT5QhE.css">
 </head>
 
 <body
@@ -25,7 +25,7 @@
         <nav class="hidden md:flex space-x-6 items-center">
             <a href="AdminDashboard.html"
                 class="font-semibold text-eco-dark hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">Dashboard</a>
-            <a href="AllComplaints.html" class="nav-content">All Complaints</a>
+            <a href="AllComplaints.html" id="navAllComplaints" class="nav-content">All Complaints</a>
             <a href="Analytics.html" class="nav-content">Analytics</a>
 
             <!-- Profile Menu -->
@@ -59,7 +59,7 @@
             <nav class="mt-6 flex flex-col space-y-2 px-6">
                 <a href="AdminDashboard.html"
                     class="font-semibold text-eco-dark hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">Dashboard</a>
-                <a href="AllComplaints.html" class="nav-content">All Complaints</a>
+                <a href="AllComplaints.html" id="mobileNavAllComplaints" class="nav-content">All Complaints</a>
                 <a href="Analytics.html" class="nav-content">Analytics</a>
                 <a href="AdminProfile.html" class="nav-content">Admin Profile</a>
             </nav>
