--- a/src/Newcomplaint.html
+++ b/src/Newcomplaint.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ComplaNet — Dashboard</title>
 
-  <script type="module" crossorigin src="../assets/darkMode-U0iCC7-S.js"></script>
-  <link rel="stylesheet" crossorigin href="../assets/darkMode-CDwods8u.css">
+  <script type="module" crossorigin src="../assets/darkMode-BCgXZOzb.js"></script>
+  <link rel="stylesheet" crossorigin href="../assets/darkMode-DXUT5QhE.css">
 </head>
 
 <body
@@ -31,6 +31,7 @@
       <a href="Newcomplaint.html"
         class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">New Complaint</a>
       <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
+      <a href="LostAndFound.html" class="nav-content">Report Lost</a>
 
 
 
@@ -70,6 +71,7 @@
           class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">New
           Complaint</a>
         <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
+        <a href="LostAndFound.html" class="nav-content">Report Lost</a>
         <a href="Profile.html" class="nav-content">View Profile</a>
       </nav>
     </div>
@@ -172,6 +174,7 @@
             Complaints not fitting in any of the above categories.</p>
         </div>
       </a>
+
 
     </div>
   </main>
