--- a/src/Notifications.html
+++ b/src/Notifications.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notifications — ComplaNet</title>
-  <script type="module" crossorigin src="../assets/darkMode-U0iCC7-S.js"></script>
-  <script type="module" crossorigin src="../assets/notifications-BTyRan86.js"></script>
-  <link rel="stylesheet" crossorigin href="../assets/darkMode-CDwods8u.css">
+  <script type="module" crossorigin src="../assets/darkMode-BCgXZOzb.js"></script>
+  <script type="module" crossorigin src="../assets/notifications-BT-pgEtn.js"></script>
+  <link rel="stylesheet" crossorigin href="../assets/darkMode-DXUT5QhE.css">
 </head>
 
 <body
@@ -29,6 +29,7 @@
                 <a href="UserDashboard.html" class="nav-content">Dashboard</a>
                 <a href="Newcomplaint.html" class="nav-content">New Complaint</a>
                 <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
+                <a href="LostAndFound.html" class="nav-content">Report Lost</a>
             </nav>
 
             <!-- Notification Bell (Always Visible) -->
@@ -77,6 +78,7 @@
                     class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">Notifications</a>
                 <a href="Newcomplaint.html" class="nav-content">New Complaint</a>
                 <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
+                <a href="LostAndFound.html" class="nav-content">Lost & Found</a>
                 <a href="Profile.html" class="nav-content">View Profile</a>
             </nav>
         </div>
