--- a/src/UserDashboard.html
+++ b/src/UserDashboard.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ComplaNet — Dashboard</title>
 
-  <script type="module" crossorigin src="../assets/userDashboard-CnLkRzYS.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/darkMode-U0iCC7-S.js">
-  <link rel="modulepreload" crossorigin href="../assets/notifications-BTyRan86.js">
-  <link rel="stylesheet" crossorigin href="../assets/darkMode-CDwods8u.css">
+  <script type="module" crossorigin src="../assets/userDashboard-DJRuvql_.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/darkMode-BCgXZOzb.js">
+  <link rel="modulepreload" crossorigin href="../assets/notifications-BT-pgEtn.js">
+  <link rel="stylesheet" crossorigin href="../assets/darkMode-DXUT5QhE.css">
 </head>
 
 <body
@@ -34,6 +34,7 @@
           class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">Dashboard</a>
         <a href="Newcomplaint.html" class="nav-content">New Complaint</a>
         <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
+        <a href="LostAndFound.html" class="nav-content">Report Lost</a>
       </nav>
 
       <!-- Notification Bell (Always Visible) -->
@@ -56,7 +57,8 @@
           <a href="Profile.html"
             class="block px-4 py-2 text-gray-700 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-700">View
             Profile</a>
-          <a href="Login.html" class="block px-4 py-2 text-red-600 hover:bg-gray-100 dark:hover:bg-gray-700">Log Out</a>
+          <a href="javascript:void(0)" id="headerLogoutBtn"
+            class="block px-4 py-2 text-red-600 hover:bg-gray-100 dark:hover:bg-gray-700">Log Out</a>
         </div>
       </div>
 
@@ -80,11 +82,12 @@
         <a href="Notifications.html" class="nav-content">Notifications</a>
         <a href="Newcomplaint.html" class="nav-content">New Complaint</a>
         <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
+        <a href="LostAndFound.html" class="nav-content">Report Lost</a>
         <a href="Profile.html" class="nav-content">View Profile</a>
       </nav>
     </div>
     <div class="px-6 py-4 border-t dark:border-gray-700 flex flex-col space-y-2">
-      <a href="Login.html" class="block py-2 hover:text-red-500 transition">Log Out</a>
+      <a href="javascript:void(0)" id="mobileLogoutBtn" class="block py-2 hover:text-red-500 transition">Log Out</a>
     </div>
   </aside>
 
@@ -279,6 +282,8 @@
       </div>
 
     </footer>
+
+
 
 
   </main>
