Refine Lost & Found UI: Global filters, search enhancements, and deployment config update

--- a/src/AdminDashboard.html
+++ b/src/AdminDashboard.html
@@ -170,9 +170,9 @@
                         <thead
                             class="text-gray-500 dark:text-gray-400 uppercase text-xs leading-normal border-b dark:border-gray-700">
                             <tr>
-                                <th class="py-3 px-6 text-left">Title</th>
+                                <th class="py-3 px-6 text-left">Complaint Title</th>
                                 <th class="py-3 px-6 text-left">Category</th>
-                                <th class="py-3 px-6 text-left">Date</th>
+                                <th class="py-3 px-6 text-left">Date Reported</th>
                                 <th class="py-3 px-6 text-center">Status</th>
                                 <th class="py-3 px-6 text-center">Actions</th>
                             </tr>
