--- a/src/AdminLostFoundDashboard.html
+++ b/src/AdminLostFoundDashboard.html
@@ -168,8 +168,8 @@
                             class="text-gray-500 dark:text-gray-400 uppercase text-xs leading-normal border-b dark:border-gray-700">
                             <tr>
                                 <th class="py-3 px-6 text-left">Item Name</th>
-                                <th class="py-3 px-6 text-left">Type</th>
-                                <th class="py-3 px-6 text-left">Reported Date</th>
+                                <th class="py-3 px-6 text-left">Category</th>
+                                <th class="py-3 px-6 text-left">Date Recorded</th>
                                 <th class="py-3 px-6 text-center">Status</th>
                                 <th class="py-3 px-6 text-center">Actions</th>
                             </tr>
