--- a/src/AllComplaints.html
+++ b/src/AllComplaints.html
@@ -140,11 +140,11 @@
                         class="bg-gray-100 dark:bg-gray-700 text-gray-600 dark:text-gray-200 uppercase text-sm leading-normal">
                         <tr>
 
-                            <th class="py-3 px-6 text-left">Title</th>
+                            <th class="py-3 px-6 text-left">Complaint Title</th>
                             <th class="py-3 px-6 text-left">Category</th>
-                            <th class="py-3 px-6 text-left">Description</th>
-                            <th class="py-3 px-6 text-left">Date</th>
-                            <th class="py-3 px-6 text-left">Lodged By</th>
+                            <th class="py-3 px-6 text-left">Details</th>
+                            <th class="py-3 px-6 text-left">Date Reported</th>
+                            <th class="py-3 px-6 text-left">Reported By</th>
                             <th class="py-3 px-6 text-center">Status</th>
                             <th class="py-3 px-6 text-center">Actions</th>
                         </tr>
