deploy: 0d58e4d2bb810ff1b9d349d61d70b8025a3116f8

--- a/src/AdminDashboard.html
+++ b/src/AdminDashboard.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ComplaNet — Admin Dashboard</title>
-  <script type="module" crossorigin src="../assets/adminDashboard-B_xCTY_c.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/darkMode-BCgXZOzb.js">
-  <link rel="stylesheet" crossorigin href="../assets/darkMode-DXUT5QhE.css">
+  <script type="module" crossorigin src="../assets/adminDashboard-BKIoshVU.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/darkMode-C5bWaft0.js">
+  <link rel="stylesheet" crossorigin href="../assets/darkMode-Ckdx90NO.css">
 </head>
 
 <body
@@ -172,9 +172,9 @@
                         <thead
                             class="text-gray-500 dark:text-gray-400 uppercase text-xs leading-normal border-b dark:border-gray-700">
                             <tr>
-                                <th class="py-3 px-6 text-left">Title</th>
+                                <th class="py-3 px-6 text-left">Complaint Title</th>
                                 <th class="py-3 px-6 text-left">Category</th>
-                                <th class="py-3 px-6 text-left">Date</th>
+                                <th class="py-3 px-6 text-left">Date Reported</th>
                                 <th class="py-3 px-6 text-center">Status</th>
                                 <th class="py-3 px-6 text-center">Actions</th>
                             </tr>
