--- a/src/AdminLostFoundDashboard.html
+++ b/src/AdminLostFoundDashboard.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ComplaNet — Lost & Found Dashboard</title>
-  <script type="module" crossorigin src="../assets/adminLostFoundDashboard-MGwd9eZf.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/darkMode-BCgXZOzb.js">
-  <link rel="stylesheet" crossorigin href="../assets/darkMode-DXUT5QhE.css">
+  <script type="module" crossorigin src="../assets/adminLostFoundDashboard-Agy_Clw8.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/darkMode-C5bWaft0.js">
+  <link rel="stylesheet" crossorigin href="../assets/darkMode-Ckdx90NO.css">
 </head>
 
 <body
@@ -170,8 +170,8 @@
                             class="text-gray-500 dark:text-gray-400 uppercase text-xs leading-normal border-b dark:border-gray-700">
                             <tr>
                                 <th class="py-3 px-6 text-left">Item Name</th>
-                                <th class="py-3 px-6 text-left">Type</th>
-                                <th class="py-3 px-6 text-left">Reported Date</th>
+                                <th class="py-3 px-6 text-left">Category</th>
+                                <th class="py-3 px-6 text-left">Date Recorded</th>
                                 <th class="py-3 px-6 text-center">Status</th>
                                 <th class="py-3 px-6 text-center">Actions</th>
                             </tr>
