--- a/src/AllComplaints.html
+++ b/src/AllComplaints.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Complaints — ComplaNet Admin</title>
-  <script type="module" crossorigin src="../assets/allComplaints-ClqyF13_.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/darkMode-BCgXZOzb.js">
-  <link rel="stylesheet" crossorigin href="../assets/darkMode-DXUT5QhE.css">
+  <script type="module" crossorigin src="../assets/allComplaints-D0e1wgNV.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/darkMode-C5bWaft0.js">
+  <link rel="stylesheet" crossorigin href="../assets/darkMode-Ckdx90NO.css">
 </head>
 
 <body
@@ -142,11 +142,11 @@
                         class="bg-gray-100 dark:bg-gray-700 text-gray-600 dark:text-gray-200 uppercase text-sm leading-normal">
                         <tr>
 
-                            <th class="py-3 px-6 text-left">Title</th>
+                            <th class="py-3 px-6 text-left">Complaint Title</th>
                             <th class="py-3 px-6 text-left">Category</th>
-                            <th class="py-3 px-6 text-left">Description</th>
-                            <th class="py-3 px-6 text-left">Date</th>
-                            <th class="py-3 px-6 text-left">Lodged By</th>
+                            <th class="py-3 px-6 text-left">Details</th>
+                            <th class="py-3 px-6 text-left">Date Reported</th>
+                            <th class="py-3 px-6 text-left">Reported By</th>
                             <th class="py-3 px-6 text-center">Status</th>
                             <th class="py-3 px-6 text-center">Actions</th>
                         </tr>
