--- a/src/Login.html
+++ b/src/Login.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ComplaNet — Login</title>
-  <script type="module" crossorigin src="../assets/login-D7FHVrvE.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/darkMode-BCgXZOzb.js">
-  <link rel="stylesheet" crossorigin href="../assets/darkMode-DXUT5QhE.css">
+  <script type="module" crossorigin src="../assets/login-BAEn8cbx.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/darkMode-C5bWaft0.js">
+  <link rel="stylesheet" crossorigin href="../assets/darkMode-Ckdx90NO.css">
 </head>
 
 <body
